# SkyNet

./: LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: .pylintrc  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  deps.py
backend/app/api/v1/routers/: favorites.py
backend/app/api/v1/schemas/: favorite.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: favorite.py
backend/app/repositories/: favorite_repo.py
backend/app/services/: favorite_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_favorites.py
backend/tests/unit/: test_favorite_service.py
frontend/: README.md  package.json
