[tool]
name = "SkyNet"
version = "0.1.0"
description = "Um app que pode ler arquivos html provenientes de navegadores, com os links de favoritos salvos por um usuário, para acompanhar sua navegação e obter dados."
authors = ["DiasPedroQA <your_email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.19.0"
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []
